--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+Pluto = "0.19"
 julia = "1"
 
 [extras]
