--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,17 @@
+name = "CompGVFs"
+uuid = "479d8eca-aa2c-4277-a8a0-f3cd600b093c"
+authors = ["Matthew Schlegel <mkschleg@gmail.com>"]
+version = "0.1.0"
+
 [deps]
-Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
+ChoosyDataLoggers = "edd8e46e-3ca5-477d-bc67-b483295d3b14"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+MinimalRLCore = "4557a151-568a-41c4-844f-9d8069264cea"
+ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+Reproduce = "560a9c3a-0b8c-11e9-0329-d39dfcb85ed2"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 julia = "1"
